--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
     </head>
     <body>
+    	<!-- jQueryファイルはjsファイルよりも先に読み込む必要がある -->
+        <script src="jquery.min.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
-
-<body>
-	<h5>javascriptのalertの確認</h5>
-</body>
