--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
-    	<!-- jQueryファイルはjsファイルよりも先に読み込む必要がある -->
+        <div class="box1"></div>
         <script src="jquery.min.js"></script>
         <script src="app.js"></script>
     </body>
