--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <div class="box1"></div>
-        <script src="jquery.min.js"></script>
-        <script src="app.js"></script>
+        <h1>childrenサンプル</h1>
+        <button>クリック</button>
+        <h3>リスト</h3>
+        <ul>
+            <li>Home</li>
+            <li>Concept</li>
+            <li>Products</li>
+            <li>Access</li>
+        </ul>
+    <script src="jquery.min.js"></script>
+    <script src="app.js"></script>
     </body>
 </html>
